feat: add SEO and social meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#502050">
+
+  <title>Social Proof Section | Mobile-First CSS Grid Layout</title>
+
+  <meta name="title" content="Social Proof Section | Mobile-First CSS Grid Layout">
+  <meta name="description"
+    content="Responsive social proof section built with semantic HTML, CSS Grid, and a mobile-first approach. Includes accessibility enhancements and interaction states.">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vimpdev.github.io/fem-05-social-proof-section/">
+  <meta property="og:title" content="Social Proof Section | Mobile-First CSS Grid Layout">
+  <meta property="og:description"
+    content="Responsive social proof section built with semantic HTML, CSS Grid, and a mobile-first approach. Includes accessibility enhancements and interaction states.">
+  <meta property="og:image" content="https://vimpdev.github.io/fem-05-social-proof-section/docs/og-preview.png">
+  <meta property="og:image:alt"
+    content="Desktop view of the Social Proof Section layout showing staggered testimonial cards and visible focus states.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://vimpdev.github.io/fem-05-social-proof-section/">
+  <meta name="twitter:title" content="Social Proof Section | Mobile-First CSS Grid Layout">
+  <meta name="twitter:description"
+    content="Responsive social proof section built with semantic HTML, CSS Grid, and a mobile-first approach. Includes accessibility enhancements and interaction states.">
+  <meta name="twitter:image" content="https://vimpdev.github.io/fem-05-social-proof-section/docs/og-preview.png">
+  <meta name="twitter:image:alt"
+    content="Desktop view of the Social Proof Section layout showing staggered testimonial cards and visible focus states.">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
-  <title>Social proof section</title>
 
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
