fix: improve color contrast and remove redundant alt text

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <article class="testimonial">
         <header class="testimonial__header">
-          <img src="./assets/images/image-colton.jpg" alt="Colton Smith" class="testimonial__photo">
+          <img src="./assets/images/image-colton.jpg" alt="" class="testimonial__photo">
           <h3 class="testimonial__name">Colton Smith</h3>
           <span class="testimonial__status">Verified Buyer</span>
         </header>
@@ -103,7 +103,7 @@
 
       <article class="testimonial">
         <header class="testimonial__header">
-          <img src="./assets/images/image-irene.jpg" alt="Irene Roberts" class="testimonial__photo">
+          <img src="./assets/images/image-irene.jpg" alt="" class="testimonial__photo">
           <h3 class="testimonial__name">Irene Roberts</h3>
           <span class="testimonial__status">Verified Buyer</span>
         </header>
@@ -116,7 +116,7 @@
 
       <article class="testimonial">
         <header class="testimonial__header">
-          <img src="./assets/images/image-anne.jpg" alt="Anne Wallace" class="testimonial__photo">
+          <img src="./assets/images/image-anne.jpg" alt="" class="testimonial__photo">
           <h3 class="testimonial__name">Anne Wallace</h3>
           <span class="testimonial__status">Verified Buyer</span>
         </header>
